adjust html classes
Co-authored-by: JohnNils Olson <johnnils@gmail.com>
Co-authored-by: Ian Scott <chesnekov@gmail.com>

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       of cupcake tops to every man, woman, and child, in
       South-West Oklahoma.</p>
 
-      <p>Our master-Bakers have created unique recipe's found nowhere else in the world!</p>
+      <p class = "flashy">Our master-Bakers have created unique recipe's found nowhere else in the world!</p>
 
       <img src="img/best-buttercream-frosting.jpg" alt="The Best Buttercream Frosting!">
 
