change flashy CSS styling and add flashy span in html.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <p>To place an order, please<a href="notarealemail@fakenews.com" class="flashy"> send us an email!</a></p>
 
-      <h6>We only accept money orders for payment.</h6>
+      <h6>We are a <span class="flashy">Money Order Only Business!</span></h6>
 
   </body>
 </html>
